# robot-descriptions-common

./: .gitignore  README.md
camera_models/meshes/d405/: d405.mtl
camera_models/meshes/d435/: d435.mtl
camera_models/meshes/dabai/: dabai.mtl
camera_models/meshes/mid360/: mid360.mtl
dexhands/brainco_description/meshes/revo2/: materials.mtl
dexhands/brainco_description/xacro/: revo2.xacro
dexhands/linkerhand_description/: CMakeLists.txt  README.md  package.xml
dexhands/linkerhand_description/xacro/: hand.xacro  o7.xacro
dexhands/oymotion_description/: CMakeLists.txt  README.md  package.xml
dexhands/oymotion_description/meshes/rohand_gen2/: materials.mtl
dexhands/oymotion_description/xacro/: hand.xacro  rohand_gen2.xacro
gripper/changingtek_description/xacro/: AG2F90-C.xacro
gripper/jodell_description/: CMakeLists.txt  README.md  package.xml
gripper/jodell_description/xacro/: RG75-300.xacro  gripper.xacro
robot_common_launch/: package.xml  setup.py
robot_common_launch/config/gazebo/: gz_bridge.yaml
robot_common_launch/config/rviz/: cartesian_controller.rviz
robot_common_launch/launch/control/: cartesian_controller.launch.py  controller_manager.launch.py  diff_drive.launch.py
robot_common_launch/launch/visualize/: component.launch.py  gripper.launch.py  humanoid.launch.py  manipulator.launch.py  visualize.launch.py
robot_common_launch/robot_common_launch/: __init__.py
robot_common_launch/robot_common_launch/common/: launch_utils.py  robot_utils.py
sensor_models/: CMakeLists.txt  package.xml
sensor_models/meshes/d405/: d405.mtl
(+18 files in other folders)
